Remove unused serverless vars and add lint support

--- a/resources/functions.yml
+++ b/resources/functions.yml
@@ -1,6 +1,6 @@
 # Serverless Framework specific syntax
 
 api:
-  handler: src/events/index.handler
+  handler: src/events/api.handler
   events:
     - httpApi: "*"
