--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "1.0.0",
     "description": "A serverless API to store and manipulate events",
     "scripts": {
-        "test": "glob -c \"node --loader tsx --test\" \"./src/**/*.test.ts\""
+        "test": "glob -c \"node --import tsx --test\" \"./src/**/*.test.ts\"",
+        "lint": "eslint --ext .ts --fix ."
     },
     "dependencies": {
         "express": "^4.18.2",
@@ -14,7 +15,10 @@
         "@types/aws-lambda": "^8.10.119",
         "@types/express": "^4.17.21",
         "@types/node": "^18.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.16.0",
+        "@typescript-eslint/parser": "^6.16.0",
         "esbuild": "^0.17.19",
+        "eslint": "^8.56.0",
         "glob": "^10.3.3",
         "serverless": "^3.34.0",
         "serverless-esbuild": "^1.46.0",
