--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.481.0",
+    "@aws-sdk/lib-dynamodb": "^3.481.0",
     "express": "^4.18.2",
-    "serverless-http": "^3.1.1"
+    "serverless-http": "^3.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.119",
     "@types/express": "^4.17.21",
     "@types/node": "^18.0.0",
     "@types/supertest": "^6.0.1",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "esbuild": "^0.17.19",
