--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.481.0",
     "@aws-sdk/lib-dynamodb": "^3.481.0",
+    "aws-dynamodb-local": "^0.0.11",
     "express": "^4.18.2",
+    "serverless-dynamodb": "^0.2.47",
     "serverless-http": "^3.1.1",
     "uuid": "^9.0.1"
   },
