--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
+    "aws-sdk-client-mock": "^3.0.0",
     "esbuild": "^0.17.19",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
