--- a/serverless.yml
+++ b/serverless.yml
@@ -48,8 +48,39 @@ resources:
         AttributeDefinitions:
           - AttributeName: eventId
             AttributeType: S
+          - AttributeName: eventType
+            AttributeType: S
+          - AttributeName: eventDate
+            AttributeType: S
+          - AttributeName: location
+            AttributeType: S
+          - AttributeName: host
+            AttributeType: S
         KeySchema:
           - AttributeName: eventId
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:custom.tableName}
+        GlobalSecondaryIndexes:
+          - IndexName: EventTypeDateIndex
+            KeySchema:
+              - AttributeName: eventType
+                KeyType: HASH
+              - AttributeName: eventDate
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
+          - IndexName: LocationDateIndex
+            KeySchema:
+              - AttributeName: location
+                KeyType: HASH
+              - AttributeName: eventDate
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
+          - IndexName: HostIndex
+            KeySchema:
+              - AttributeName: host
+                KeyType: HASH
+            Projection:
+              ProjectionType: ALL
