--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/aws-lambda": "^8.10.119",
     "@types/express": "^4.17.21",
     "@types/node": "^18.0.0",
