--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "express": "^4.18.2",
     "serverless-dynamodb": "^0.2.47",
     "serverless-http": "^3.1.1",
-    "uuid": "^9.0.1"
+    "serverless-webpack": "^5.13.0",
+    "uuid": "^9.0.1",
+    "webpack": "^5.89.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@types/aws-lambda": "^8.10.119",
     "@types/express": "^4.17.21",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.19.4",
     "@types/supertest": "^6.0.1",
     "@types/uuid": "^9.0.7",
+    "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "aws-sdk-client-mock": "^3.0.0",
@@ -34,6 +37,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "glob": "^10.3.3",
     "husky": "^8.0.0",
     "prettier": "^3.1.1",
@@ -41,8 +45,11 @@
     "serverless-esbuild": "^1.46.0",
     "serverless-offline": "^12.0.4",
     "supertest": "^6.3.3",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3",
+    "webpack-node-externals": "^3.0.0"
   },
   "main": ".eslintrc.js",
   "repository": {
