--- a/serverless.yml
+++ b/serverless.yml
@@ -14,17 +14,26 @@ custom:
       migrate: true
       docker: false
       seed: true
-
     seed:
       domain:
         sources:
           - table: ${self:custom.tableName}
             sources: [./resources/seeds/events.json]
 
+    webpack:
+      webpackConfig: "webpack.config.js" # Name of webpack configuration file
+      includeModules: false # Node modules configuration for packaging
+      packager: "npm" # Packager that will be used to package your external modules
+      excludeFiles: src/**/*.test.ts # Provide a glob for files to ignore
+
 plugins:
+  - serverless-webpack
   - serverless-offline # used for local execution
   - serverless-esbuild # used for compiling/packaging the Typescript code
   - serverless-dynamodb
+
+package:
+  individually: true
 
 provider:
   name: aws
