--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.0",
   "description": "A serverless API to store and manipulate events",
   "scripts": {
-    "test": "glob -c \"node --import tsx --test\" \"./src/**/*.test.ts\"",
-    "test-only": "glob -c \"node --import tsx --test-only\" \"./src/**/*.test.ts\"",
+    "test": "nyc mocha --require ts-node/register src/**/*.test.ts",
     "build": "tsc --noemit",
     "lint": "eslint --ext .ts --fix .",
     "prettier": "prettier --write --ignore-unknown .",
@@ -25,7 +24,9 @@
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@types/aws-lambda": "^8.10.119",
+    "@types/chai": "^4.3.11",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^18.19.4",
     "@types/supertest": "^6.0.1",
     "@types/uuid": "^9.0.7",
@@ -33,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "aws-sdk-client-mock": "^3.0.0",
+    "chai": "^5.0.0",
     "esbuild": "^0.17.19",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -40,6 +42,8 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "glob": "^10.3.3",
     "husky": "^8.0.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
     "prettier": "^3.1.1",
     "serverless": "^3.38.0",
     "serverless-esbuild": "^1.46.0",
