add test dependencie to deploy-dev

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
     name: deploy-dev
     runs-on: ubuntu-latest
     environment: dev
+    needs: [test]
 
     strategy:
       matrix:
@@ -60,7 +61,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm test
       - name: serverless deploy
         uses: serverless/github-action@v3.2
         with:
