--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "target": "ES2022",
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true
   },
   "ts-node": {
     "compilerOptions": {
