--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 // ./tsconfig.json
 {
   "compilerOptions": {
-    "lib": ["ES2022"],
+    "lib": ["ES2022", "DOM"],
     "module": "ES2022",
     "moduleResolution": "Bundler", // introduced in TypeScript 5.0
     "allowSyntheticDefaultImports": true,
