--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nyc": "^15.1.0",
     "prettier": "^3.1.1",
     "serverless": "^3.38.0",
+    "serverless-auto-swagger": "^2.12.0",
     "serverless-esbuild": "^1.46.0",
     "serverless-offline": "^12.0.4",
     "supertest": "^6.3.3",
