--- a/resources/functions.yml
+++ b/resources/functions.yml
@@ -7,6 +7,7 @@ createEvent:
         method: post
         path: /events
         responses:
+          default: ""
           201:
             description: "Created"
             bodyType: "Event"
@@ -23,6 +24,7 @@ getEvent:
         method: get
         path: /events/{eventId}
         responses:
+          default: ""
           200:
             description: "OK"
             bodyType: "Event"
@@ -40,6 +42,7 @@ getAllEvents:
         method: get
         path: /events
         responses:
+          default: ""
           200:
             description: "OK"
             bodyType: "Events"
@@ -57,6 +60,7 @@ updateEvent:
         method: put
         path: /events/{eventId}
         responses:
+          default: ""
           204:
             description: "No content"
           400:
@@ -76,6 +80,7 @@ deleteEvent:
         method: delete
         path: /events/{eventId}
         responses:
+          default: ""
           204:
             description: "No content"
           400:
